--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ a{
 /*--------HEADER........*/
 
 header{
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     position: sticky;
     top: 0;
     display: flex;
@@ -226,23 +226,59 @@ footer{
     align-items: center;
 }
 
+/*!-----MEDIA QUERY-----*/
 
-@media screen and (max-width: 950px;) {
+@media screen and (max-width: 950px) {
     .grid-galeria{
-        grid-template-columns: 
-        repeat(2,1fr);
+        grid-template-columns: repeat(2,1fr);
         grid-template-rows: 220px;
     }
+    
     .grid-item{
         grid-column: span 1;
         grid-row: span 1;
     }
+
+    .sobre-nosotros{
+        flex-direction: column;
+        padding: 50px;
+    }
+    .sobre-nosotros img{
+        width: 75%;
+        height: 400px;
+    }
+    .sobre-nosotros p{
+        width: 70%;
+        text-align: center;
+    }
 }
 
-@media screen and (max-width: 450px;){
+@media screen and (max-width:700px) {
+    header{
+        flex-direction: column;
+    }
+    .hero h1{
+        font-size: 45px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width:560px) {
+    header nav ul{
+        flex-direction: column;
+    }
+    
+    header nav ul li{
+        margin: 5px;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width:450px) {
     .grid-galeria{
         grid-template-columns: 1fr;
     }
+
     .grid-item{
         grid-column: span 1;
         grid-row: span 1;
