--- a/css/style.css
+++ b/css/style.css
@@ -16,51 +16,15 @@ a{
 }
 
 /*--------HEADER........*/
-
-header{
-    background-color: rgb(0, 0, 0);
-    position: sticky;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-    z-index: 10;
+header nav img{
+    width: 75px;
+    height: 75px;
 }
 
-.icono{
-    display: flex;
-    align-items: center;
+header nav{
+    background-color: white
 }
 
-.icono img{
-    display: flex;
-    height: 50px;
-    width: 50px;
-    margin-right: 10px;
-}
-.nombre-negocio{
-    font-weight: 700;
-    font-family: 'Source Sans Pro', sans-serif;
-    color: white;
-    font-size: 45px;
-}
-
-header nav ul{
-    list-style: none;
-    display: flex;
-    margin: 10px;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-header nav ul li{
-    margin: 15px 5px 15px 5px;
-}
-
-header nav ul li a{
-    text-decoration: none;
-    color: white;
-}
 
 /*--------MAIN----------*/
 .hero{
@@ -114,8 +78,8 @@ header nav ul li a{
 .sobre-nosotros img{
     width: 700px;
     height: 500px;
+    margin: 120px;
 }
-
 
 .productos h2{
     text-align: center;
@@ -136,10 +100,10 @@ header nav ul li a{
     height: 370px;
     border: 1px black solid;
     text-align: center;
-    margin: 20px;
+    margin: 110px;
     box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
--webkit-box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
--moz-box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
+    -webkit-box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
+    -moz-box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
 }
 
 .productos div img{
@@ -153,6 +117,14 @@ header nav ul li a{
 
 .productos div a{
     background-color: black;
+    color: white;
+    padding: 10px;
+}
+
+h4{
+    text-align: center;
+    background-color: black;
+    font-size: 30px;
     color: white;
     padding: 10px;
 }
@@ -183,7 +155,8 @@ header nav ul li a{
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-auto-rows: 250px;
-    gap: 15px;
+    gap: 20px;
+    margin-block-end: 50px;
 }
 
 .grid-galeria div img{
@@ -230,11 +203,38 @@ header nav ul li a{
 /*--------FOOTER--------*/
 
 footer{
+    background-color: #223843;
     display: flex;
     justify-content: space-around;
     align-items: center;
+    padding: 25px;
+    color: white;
 }
 
+div .text-center{
+    display: block;
+}
+
+.text-center{
+    text-align: center;
+}
+
+.icons{
+    display: inline-block;
+    text-align: center;
+}
+
+.info{
+    text-align: center;
+}
+
+p{
+    display: block;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
 /*!-----MEDIA QUERY-----*/
 
 @media screen and (max-width: 950px) {
@@ -295,4 +295,60 @@ footer{
         grid-column: span 1;
         grid-row: span 1;
     }
+}
+
+/*---Sobre Nosotros---*/
+.quienessomos h2{
+    text-align: center;
+    background-color: #223843;
+    font-size: 30px;
+    color: white;
+}
+
+.comotrabajamos h2{
+    text-align: center;
+    background-color: #223843;
+    font-size: 30px;
+    color: white;
+}
+
+/*----Servicios----*/
+.servicios{
+    padding: 25px;
+    background-color: rgb(253, 245, 234)
+}
+
+main section ul{
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.granja h2{
+    text-align: center;
+    background-color: #223843;
+    font-size: 30px;
+    color: white;
+}
+
+.carniceria h2{
+    text-align: center;
+    background-color: #223843;
+    font-size: 30px;
+    color: white;
+}
+
+.verduleria h2{
+    text-align: center;
+    background-color: #223843;
+    font-size: 30px;
+    color: white;
+}
+
+.almacen h2{
+    text-align: center;
+    background-color: #223843;
+    font-size: 30px;
+    color: white;
 }
