--- a/css/style.css
+++ b/css/style.css
@@ -17,14 +17,38 @@ a{
 
 /*--------HEADER........*/
 header nav img{
-    width: 75px;
-    height: 75px;
+    width: 65px;
+    height: 65px;
 }
 
 header nav{
-    background-color: white
+    background-color: black;
 }
 
+.container-fluid img{
+    margin-right: 10px;
+    margin: 10px;
+}
+
+.nav-item{
+    justify-content: space-around;
+}
+
+.navbar-brand{
+    color: white!important;
+}
+
+.nav-link{
+    color: white!important;
+}
+
+.navbar-light .navbar-toggler-icon{
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-light .navbar-toggler{
+    border: 1px solid white;
+}
 
 /*--------MAIN----------*/
 .hero{
