--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,8 @@ a{
 
 /*--------HEADER........*/
 header nav img{
-    width: 65px;
-    height: 65px;
+    width: 40px;
+    height: 40px;
 }
 
 header nav{
@@ -51,40 +51,26 @@ header nav{
 }
 
 /*--------MAIN----------*/
-.hero{
-    background-image: url("../img/local.jpeg");
-    width: 100%;
-    height: 840px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    text-align: center;
-    color: white;
-    background-attachment: fixed;
-    display: flex;
+.d-item{
+    height: 865px;
+}
+
+.d-img{
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(0.6);
+}
+
+.d-flex{
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
-.hero h1{
-    font-size: 65px;
-    border: 2px solid white;
-    padding: 25px;
-    margin: 10px;
-    font-family: 'Source Sans Pro', sans-serif;
-}
-
-.hero p{
-    font-size: 30px;
-    margin-bottom: 30px;
-}
-
-.hero a{
-    color: white;
+.btn{
     background-color: black;
-    padding: 10px;
-    font-family: 'Source Sans Pro', sans-serif;
+    border-color: black;
+    color: white;
 }
 
 .sobre-nosotros{
@@ -107,7 +93,7 @@ header nav{
 
 .productos h2{
     text-align: center;
-    background-color: black;
+    background-color: #223843;
     font-size: 30px;
     color: white;
     padding: 10px;
@@ -147,7 +133,7 @@ header nav{
 
 h4{
     text-align: center;
-    background-color: black;
+    background-color: #223843;
     font-size: 30px;
     color: white;
     padding: 10px;
@@ -266,7 +252,7 @@ p{
         grid-template-columns: repeat(2,1fr);
         grid-template-rows: 220px;
     }
-    
+
     .grid-item{
         grid-column: span 1;
         grid-row: span 1;
@@ -296,7 +282,7 @@ p{
     header nav ul{
         flex-direction: column;
     }
-    
+
     header nav ul li{
         margin: 5px;
         text-align: center;
@@ -322,6 +308,15 @@ p{
 }
 
 /*---Sobre Nosotros---*/
+main{
+    background-color: rgb(253, 245, 234);
+}
+
+.quienessomos h1{
+    text-align: center;
+    color: #223843;
+}
+
 .quienessomos h2{
     text-align: center;
     background-color: #223843;
@@ -337,9 +332,9 @@ p{
 }
 
 /*----Servicios----*/
-.servicios{
-    padding: 25px;
-    background-color: rgb(253, 245, 234)
+.servicios1 h1{
+    text-align: center;
+    color: #223843;
 }
 
 main section ul{
@@ -347,32 +342,57 @@ main section ul{
     list-style: none;
     justify-content: space-around;
     align-items: center;
+    background-color: black;
+    padding: 10px;
 }
 
-.granja h2{
+.catalogo h2{
     text-align: center;
     background-color: #223843;
     font-size: 30px;
     color: white;
 }
 
-.carniceria h2{
-    text-align: center;
-    background-color: #223843;
-    font-size: 30px;
-    color: white;
+.catalogo .producto-contenedor{
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
-.verduleria h2{
+.catalogo div .producto-card{
+    width: 250px;
+    height: 370px;
+    border: 1px black solid;
     text-align: center;
-    background-color: #223843;
-    font-size: 30px;
-    color: white;
+    margin: 110px;
+    box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
+    -webkit-box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
+    -moz-box-shadow: 10px 11px 21px 0px rgba(0,0,0,0.76);
 }
 
-.almacen h2{
-    text-align: center;
-    background-color: #223843;
-    font-size: 30px;
+.catalogo div img{
+    width: 100%;
+    height: 270px;
+}
+
+.catalogo div h3{
+    margin: 15px;
+}
+
+.catalogo div a{
+    background-color: black;
     color: white;
+    padding: 10px;
+}
+
+/*---Donde nos encontramos---*/
+.dondenosencontramos h1{
+    text-align: center;
+    color: #223843;
+}
+
+/*---Hace tu pedido--*/
+.hacetupedido h1{
+    text-align: center;
+    color: #223843;
 }
