--- a/css/style.css
+++ b/css/style.css
@@ -324,6 +324,26 @@ main{
     color: white;
 }
 
+.info-nos{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.info-nos p{
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    width: 45%;
+    margin: 50px;
+}
+
+.info-nos img{
+    width: 700px;
+    height: 500px;
+    margin: 120px;
+}
+
 .comotrabajamos h2{
     text-align: center;
     background-color: #223843;
@@ -386,9 +406,25 @@ main section ul{
 }
 
 /*---Donde nos encontramos---*/
+.donde2{
+    display: flex;
+    justify-content: space-around;
+}
 .dondenosencontramos h1{
     text-align: center;
     color: #223843;
+}
+
+.form-account{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+}
+
+.ubicacion{
+    display: flex;
+    justify-content: right;
+    flex-direction: column;
 }
 
 /*---Hace tu pedido--*/
