--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ header nav{
 .btn{
     background-color: black;
     border-color: black;
-    color: white;
+    color: white
 }
 
 .sobre-nosotros{
@@ -413,22 +413,138 @@ main section ul{
 .dondenosencontramos h1{
     text-align: center;
     color: #223843;
+    padding: 30px;
 }
 
-.form-account{
+.form{
+    background-color: #ffff;
+    margin: auto;
+    max-width: 900px;
+    padding: 10em 10em;
+    border-radius: 10px;
+    box-shadow: 0 5px 10px -5px rgb(0 0 0 / 30%);
+    text-align: center;
+}
+
+.form-title{
+    font-size: 2.5rem;
+    margin-bottom: .5em;
+}
+
+.form-paraghrap{
+    font-weight: 300;
+}
+
+.form-link{
+    font-weight: 400;
+    color: #3866f2
+}
+
+.form-container{
+    margin-top: 3em;
+    display: grid;
+    gap: 2.5em;
+}
+
+.form-group{
+    position: relative;
+    --color: #5757577e;
+}
+
+.form-imput{
+    width: 100%;
+    background: none;
+    color: #706c6c;
+    font-size: 1.2rem;
+    padding: .6em .3em;
+    border: none;
+    outline: none;
+    border-bottom: 1px solid var(--color);
+
+}
+
+.form-imput:focus,
+.form-imput:not(:placeholder-shown){
+    color: #4d4646;
+}
+
+.form-imput:focus + .form-label,
+.form-imput:not(:placeholder-shown) + .form-label{
+    transform: translateY(-12px) scale(.7);
+    transform-origin: left top;
+    color: #3866f2;
+}
+
+.form-label{
+    color: var(--color);
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 5px;
+    transform: translateY(10px);
+    transition: transform .5s, color .3s;
+}
+
+.form-submit{
+    background: #3866f2;
+    color: #ffff;
+    font-weight: 300;
+    font-size: 1rem;
+    padding: .8em 0;
+    border: none;
+    border-radius: .5em;
+}
+
+.form-line{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #3866f2;
+    transform: scale(0);
+    transform: left bottom;
+    transition: transform .4s;
+}
+
+.form-imput:focus + .form-line,
+.form-imput:not(:placeholder-shown) + .form-line{
+    transform: scale(1);
+}
+
+.ubicacion h2{
     display: flex;
-    flex-direction: column;
-    align-items: left;
+    justify-content: center;
+    width: 100%;
+    background-color: #223843;
+    font-size: 30px;
+    color: rgb(253, 245, 234);
+    padding: 10px;
+}
+
+.ubicacion p{
+
+}
+
+.donde2{
+    padding: 50px;
+}
+/*---Hace tu pedido--*/
+.hacetupedido2{
+    display: flex;
+    justify-content: space-around;
+    padding: 50px;
+}
+
+.hacetupedido h1{
+    display: flex;
+    justify-content: center;
+    color: #223843;
+    padding: 30px;
 }
 
 .ubicacion{
     display: flex;
-    justify-content: right;
+    align-items: center;
     flex-direction: column;
-}
-
-/*---Hace tu pedido--*/
-.hacetupedido h1{
-    text-align: center;
-    color: #223843;
 }
