--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,5 +1,5 @@
 header nav {
-  background-color: black;
+  background-color: #223843;
   margin-right: 10px;
   margin: 10px; }
   header nav div a img {
