--- a/scss/components/estilos.scss
+++ b/scss/components/estilos.scss
@@ -1,6 +1,6 @@
 header{
     nav{
-        background-color: black;
+        background-color: #223843;
         margin-right: 10px;
         margin: 10px;
         div{
