--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ header nav img{
 }
 
 header nav{
-    background-color: black;
+    background-color: #223843;
 }
 
 .container-fluid img{
@@ -124,6 +124,7 @@ header nav{
     font-size: 30px;
     color: rgb(253, 245, 234);
     padding: 10px;
+    font-family: 'Mate SC', serif;
 }
 
 .productos .producto-contenedor{
@@ -162,6 +163,7 @@ header nav{
 .productos div a{
     background-color: black;
     color: white;
+    border-radius: 10px;
     padding: 10px;
 }
 
@@ -171,6 +173,7 @@ h4{
     font-size: 30px;
     color: rgb(253, 245, 234);
     padding: 10px;
+    font-family: 'Mate SC', serif;
 }
 
 .galeria div{
