--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,11 @@ header nav{
 }
 
 /*--------MAIN----------*/
+section .hero{
+    width: 100%;
+    height: 100%;
+}
+
 .d-item{
     height: 865px;
 }
